# data-extraction

./: .gitignore  LICENSE  README.md  manage.py  package-lock.json  package.json  pyproject.toml  tailwind.config.js
app/: extractInfo.py  models.py  urls.py  views.py
deeplogic_internship/: asgi.py  settings.py  urls.py  wsgi.py
static/: output.css
templates/: uploadData.html
